--- a/src/main/resources/fxml/MainUI.fxml
+++ b/src/main/resources/fxml/MainUI.fxml
@@ -227,6 +227,7 @@
                                          <children>
                                              <CheckBox fx:id="forUpdateCheckBox" mnemonicParsing="false" selected="false" text="select 增加ForUpdate" />
                                              <CheckBox fx:id="annotationDAOCheckBox" mnemonicParsing="false" selected="true" text="DAO使用 @Repository 注解" />
+                                             <CheckBox fx:id="annotationMapperCheckBox" mnemonicParsing="false" selected="false" text="DAO使用 @Mapper 注解" />
                                          </children>
                                      </HBox>
                                      <HBox prefHeight="100.0" prefWidth="200.0">
