适合湘邮的项目生成样式

--- a/src/main/resources/fxml/MainUI.fxml
+++ b/src/main/resources/fxml/MainUI.fxml
@@ -206,7 +206,7 @@
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="8">
                                        <children>
-                                           <CheckBox fx:id="useExample" minWidth="100.0" mnemonicParsing="false" text="使用Example" />
+                                           <CheckBox fx:id="useExample" minWidth="100.0" mnemonicParsing="false" selected="true" text="使用Example" />
                                           <CheckBox fx:id="offsetLimitCheckBox" disable="true" minWidth="100.0" mnemonicParsing="false" selected="true" text="分页插件(暂时只支持MySQL和PostgreSQL)" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                                        </children>
                                     </HBox>
@@ -219,20 +219,20 @@
                                     <HBox spacing="18.0">
                                        <children>
                                           <CheckBox fx:id="useLombokPlugin" mnemonicParsing="false" text="LombokPlugin" />
-                                          <CheckBox fx:id="needToStringHashcodeEquals" mnemonicParsing="false" selected="true" text="生成toString/hashCode/equals方法" />
+                                          <CheckBox fx:id="needToStringHashcodeEquals" mnemonicParsing="false" selected="false" text="生成toString/hashCode/equals方法" />
                                           <CheckBox fx:id="useSchemaPrefix" mnemonicParsing="false" text="使用Schema前缀" />
                                        </children>
                                     </HBox>
                                      <HBox prefHeight="100.0" prefWidth="200.0" spacing="18.0">
                                          <children>
                                              <CheckBox fx:id="forUpdateCheckBox" mnemonicParsing="false" selected="false" text="select 增加ForUpdate" />
-                                             <CheckBox fx:id="annotationDAOCheckBox" mnemonicParsing="false" selected="true" text="DAO使用 @Repository 注解" />
-                                             <CheckBox fx:id="annotationMapperCheckBox" mnemonicParsing="false" selected="false" text="DAO使用 @Mapper 注解" />
+                                             <CheckBox fx:id="annotationDAOCheckBox" mnemonicParsing="false" selected="false" text="DAO使用 @Repository 注解" />
+                                             <CheckBox fx:id="annotationMapperCheckBox" mnemonicParsing="false" selected="true" text="DAO使用 @Mapper 注解" />
                                          </children>
                                      </HBox>
                                      <HBox prefHeight="100.0" prefWidth="200.0">
                                          <children>
-                                             <CheckBox fx:id="useDAOExtendStyle" mnemonicParsing="false" selected="true" text="DAO方法抽出到公共父接口">
+                                             <CheckBox fx:id="useDAOExtendStyle" mnemonicParsing="false" selected="false" text="DAO方法抽出到公共父接口">
                                              <HBox.margin>
                                                 <Insets right="10.0" />
                                              </HBox.margin></CheckBox>
@@ -242,7 +242,7 @@
                                     <HBox spacing="18.0">
                                        <children>
                                           <CheckBox fx:id="annotationCheckBox" mnemonicParsing="false" selected="false" text="生成JPA注解" />
-                                          <CheckBox fx:id="useActualColumnNamesCheckbox" mnemonicParsing="false" selected="false" text="使用实际的列名" />
+                                          <CheckBox fx:id="useActualColumnNamesCheckbox" mnemonicParsing="false" selected="true" text="使用实际的列名" />
                                            <CheckBox fx:id="useTableNameAliasCheckbox" mnemonicParsing="false" selected="false" text="启用as别名查询" />
                                        </children>
                                     </HBox>
