--- a/src/main/resources/fxml/MainUI.fxml
+++ b/src/main/resources/fxml/MainUI.fxml
@@ -106,6 +106,11 @@
                                           <Insets right="5.0" />
                                        </HBox.margin>
                                             </TextField>
+                                     <CheckBox fx:id="updateInterfaceNameCheckbox" mnemonicParsing="false" selected="true" text="自动更新接口文件名">
+                                         <HBox.margin>
+                                             <Insets right="5.0" />
+                                         </HBox.margin>
+                                     </CheckBox>
                                     <Button mnemonicParsing="false" onAction="#openTableColumnCustomizationPage" text="定制列">
                                        <styleClass>
                                           <String fx:value="btn" />
