--- a/src/main/resources/fxml/MainUI.fxml
+++ b/src/main/resources/fxml/MainUI.fxml
@@ -72,7 +72,7 @@
                                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="688.0" minWidth="10.0" prefWidth="222.0" />
                                       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="688.0" minWidth="69.0" prefWidth="76.0" />
                                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="688.0" minWidth="10.0" prefWidth="108.0" />
-                              <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="688.0" minWidth="10.0" prefWidth="129.0" />
+                              <!--<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="688.0" minWidth="10.0" prefWidth="129.0" />-->
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="688.0" minWidth="10.0" prefWidth="95.0" />
                                   </columnConstraints>
                                   <rowConstraints>
@@ -107,6 +107,11 @@
                                        </HBox.margin>
                                             </TextField>
                                      <CheckBox fx:id="updateInterfaceNameCheckbox" mnemonicParsing="false" selected="true" text="自动更新接口文件名">
+                                         <HBox.margin>
+                                             <Insets right="5.0" />
+                                         </HBox.margin>
+                                     </CheckBox>
+                                     <CheckBox fx:id="useActualTableNameCheckbox" mnemonicParsing="false" selected="false" text="使用实际的表名">
                                          <HBox.margin>
                                              <Insets right="5.0" />
                                          </HBox.margin>
